--- a/Products.Client/Products.Client/index.html
+++ b/Products.Client/Products.Client/index.html
@@ -13,7 +13,7 @@
         <input id="name" type="text" />
         <label for="categories">Category</label>
         <select id="categories">
-            <option id="0"></option>
+            <option id=""></option>
         </select>
         <ul id="products-list"></ul>
         <input id="prev-page" type="button" value="Previous" disabled="disabled" />
@@ -35,6 +35,8 @@
         var productsBaseUrl = baseUrl + '/products/';
         var categoriesBaseUrl = baseUrl + '/categories/';
         var currentPage = 0;
+        var $searchProductName = $('#name');
+        var $searchProductCategory = $('#categories');
         httpModule.get(categoriesBaseUrl, onLoadCategories, onError);
         httpModule.get(productsBaseUrl + '?page=0', onLoadProducts, onError);
         //$('#del').click(function () {
@@ -50,7 +52,8 @@
         //function onSuccess(data) {
         //        $('#result').text(data);
         //}
-
+        $('#name').keyup(search);
+        $('#categories').change(search);
         $('#prev-page').click(function () {
             var $this = $(this);
             currentPage -= 1;
@@ -65,6 +68,14 @@
             $('#prev-page').removeAttr('disabled');
             //TODO: last page
         });
+
+        function search() {
+            //TODO: fix search and paging work together
+            var name = $searchProductName.val();
+            var categoryId = $searchProductCategory.find(':selected').attr('id');
+            var searchUrl = productsBaseUrl + 'search' + '?name=' + name + '&category=' + categoryId;
+            httpModule.get(searchUrl, onLoadProducts, onError);
+        }
 
         function onLoadProducts(products) {
             var $productsList = $('#products-list');
