Render picture from db. Default picture on the server add.

--- a/Products.Client/Products.Client/index.html
+++ b/Products.Client/Products.Client/index.html
@@ -91,6 +91,7 @@
             loadProducts();
         });
         $("#update-form").submit(function () {
+            //TODO: fix file is not sent
             var formData = new FormData($(this)[0]);
 
             $.ajax({
